@@ -2,17 +2,18 @@ package store;
 
 import java.awt.event.ItemEvent;
 import java.awt.event.ItemListener;
+import java.sql.Connection;
 import java.sql.PreparedStatement;
 import java.sql.ResultSet;
 import java.sql.SQLException;
-import java.text.ParseException;
-import java.text.SimpleDateFormat;
+import java.util.Calendar;
 import java.util.Date;
 import javax.swing.JOptionPane;
 import javax.swing.event.ChangeEvent;
 import javax.swing.event.ChangeListener;
 import javax.swing.event.DocumentEvent;
 import javax.swing.event.DocumentListener;
+import javax.swing.table.DefaultTableModel;
 import model.Product;
 import model.ProductTableModel;
 import model.Sales;
@@ -43,6 +44,23 @@ public class JEE59Store extends javax.swing.JFrame {
                     loadComboProducts();
                     loadSalesTableData();
                     salesDateField.setDate(new Date());
+                }
+                if (tabbedPane.getSelectedIndex() == 2) {
+                    reportTableTitle.setText("Report");
+                    
+                    DefaultTableModel model = new DefaultTableModel();
+                    model.setColumnIdentifiers(new Object[]{"", "", "", ""});
+                    model.addRow(new Object[]{});
+                    model.addRow(new Object[]{});
+                    model.addRow(new Object[]{});
+                    model.addRow(new Object[]{});
+                    reportTable.setModel(model);
+                    
+                    Calendar calendar = Calendar.getInstance();
+                    calendar.setTime(new Date());
+                    calendar.add(Calendar.DAY_OF_MONTH, -7);
+                    reportFromDate.setDate(calendar.getTime());
+                    reportToDate.setDate(new Date());
                 }
             }
         });
@@ -85,7 +103,7 @@ public class JEE59Store extends javax.swing.JFrame {
             public void itemStateChanged(ItemEvent e) {
                 if (e.getStateChange() == ItemEvent.SELECTED) {
                     String selectedProductName = (String) e.getItem();
-                    getSalesPrice(selectedProductName);
+                    getSalesPriceAndQuantity(selectedProductName);
                 }
             }
         });
@@ -124,39 +142,6 @@ public class JEE59Store extends javax.swing.JFrame {
 
         });
     }
-    
-    public void loadSalesTableData() {
-        SalesTableModel salesTableModel = new SalesTableModel();
-
-        try {
-            String sql = "SELECT * FROM sales;";
-            PreparedStatement ps = dBUtil.getConnection().prepareStatement(sql);
-            ResultSet rs = ps.executeQuery();
-
-            while (rs.next()) {
-                Long id = rs.getLong("id");
-                String name = rs.getString("name");
-                Double salesPrice = rs.getDouble("salesPrice");
-                Integer quantity = rs.getInt("quantity");
-                Double totalPrice = rs.getDouble("totalPrice");
-                Date date = rs.getDate("date");
-
-                Sales sales = new Sales(id, name, salesPrice, quantity, totalPrice, date);
-                salesTableModel.addProduct(sales);
-            }
-
-            salesListTable.setModel(salesTableModel);
-            ps.close();
-        } catch (Exception e) {
-            e.printStackTrace();
-        } finally {
-            try {
-                dBUtil.getConnection().close();
-            } catch (SQLException ex) {
-                ex.printStackTrace();
-            }
-        }
-    }
 
     public void loadProductTableData() {
         ProductTableModel productTableModel = new ProductTableModel();
@@ -170,8 +155,14 @@ public class JEE59Store extends javax.swing.JFrame {
                 Long id = rs.getLong("id");
                 String name = rs.getString("name");
                 Double unitPrice = rs.getDouble("unitPrice");
+                if (rs.wasNull()) {
+                    unitPrice = null;
+                }
                 Integer quantity = rs.getInt("quantity");
                 Double salesPrice = rs.getDouble("salesPrice");
+                if (rs.wasNull()) {
+                    salesPrice = null;
+                }
 
                 Product product = new Product(id, name, unitPrice, quantity, salesPrice);
                 productTableModel.addProduct(product);
@@ -234,8 +225,20 @@ public class JEE59Store extends javax.swing.JFrame {
                 return;
             }
 
-            String sql = "INSERT INTO product(name, unitPrice, quantity, salesPrice) VALUES (?, ?, ?, ?);";
+            String sql = "select count(*) as count from product where lower(name) = lower(?);";
             PreparedStatement ps = dBUtil.getConnection().prepareStatement(sql);
+            ps.setString(1, productName);
+
+            ResultSet rs = ps.executeQuery();
+            while (rs.next()) {
+                if (rs.getInt("count") > 0) {
+                    JOptionPane.showMessageDialog(rootPane, "Product Already Exists!");
+                    return;
+                }
+            }
+
+            ps = dBUtil.getConnection().prepareStatement(sql);
+            sql = "INSERT INTO product(name, unitPrice, quantity, salesPrice) VALUES (?, ?, ?, ?);";
             ps.setString(1, productName);
 
             if (unitPrice != null) {
@@ -308,7 +311,7 @@ public class JEE59Store extends javax.swing.JFrame {
                 }
             }
             Double salesPrice = null;
-            if (!productSalesPriceField.getText().trim().isEmpty()) {
+            if (!productSalesPriceField.getText().isBlank()) {
                 try {
                     if (!productSalesPriceField.getText().isBlank()) {
                         salesPrice = Double.valueOf(productSalesPriceField.getText().trim());
@@ -318,7 +321,6 @@ public class JEE59Store extends javax.swing.JFrame {
                     return;
                 }
             }
-
             String sql = "update product set name = ?, unitPrice = ?, quantity = ?, salesPrice = ? where id = ?;";
             PreparedStatement ps = dBUtil.getConnection().prepareStatement(sql);
 
@@ -389,7 +391,7 @@ public class JEE59Store extends javax.swing.JFrame {
     public void calculateTotalPrice() {
         try {
             if (!productUnitPriceField.getText().isBlank() && !productQuantityField.getText().isBlank()) {
-                Double totalPrice = Double.valueOf(productUnitPriceField.getText()) * Double.valueOf(productQuantityField.getText());
+                Double totalPrice = Double.valueOf(productUnitPriceField.getText().trim()) * Double.valueOf(productQuantityField.getText().trim());
                 productTotalPriceField.setText(String.valueOf(totalPrice));
             }
         } catch (Exception e) {
@@ -400,7 +402,7 @@ public class JEE59Store extends javax.swing.JFrame {
     public void calculateTotalSalesPrice() {
         try {
             if (!salesQuantityField.getText().isBlank() && !salesPriceField.getText().isBlank()) {
-                Double totalPrice = Integer.valueOf(salesQuantityField.getText()) * Double.valueOf(salesPriceField.getText());
+                Double totalPrice = Integer.valueOf(salesQuantityField.getText().trim()) * Double.valueOf(salesPriceField.getText().trim());
                 salesTotalPriceField.setText(String.valueOf(totalPrice));
             }
         } catch (Exception e) {
@@ -448,8 +450,8 @@ public class JEE59Store extends javax.swing.JFrame {
         }
     }
 
-    public void getSalesPrice(String productName) {
-        String sql = "select salesPrice from product where name = ?;";
+    public void getSalesPriceAndQuantity(String productName) {
+        String sql = "select salesPrice, quantity from product where name = ?;";
         PreparedStatement ps;
         ResultSet rs;
 
@@ -461,6 +463,8 @@ public class JEE59Store extends javax.swing.JFrame {
 
             while (rs.next()) {
                 String salesPrice = rs.getString("salesPrice");
+                String quantity = rs.getString("quantity");
+                salesAvailableField.setText(quantity);
                 salesPriceField.setText(salesPrice);
                 if (salesPrice == null || salesPrice.isBlank()) {
                     JOptionPane.showMessageDialog(rootPane, "This Product has no sales price!");
@@ -479,10 +483,43 @@ public class JEE59Store extends javax.swing.JFrame {
         }
     }
 
+    public void loadSalesTableData() {
+        SalesTableModel salesTableModel = new SalesTableModel();
+
+        try {
+            String sql = "SELECT * FROM sales;";
+            PreparedStatement ps = dBUtil.getConnection().prepareStatement(sql);
+            ResultSet rs = ps.executeQuery();
+
+            while (rs.next()) {
+                Long id = rs.getLong("id");
+                String name = rs.getString("name");
+                Double salesPrice = rs.getDouble("salesPrice");
+                Integer quantity = rs.getInt("quantity");
+                Double totalPrice = rs.getDouble("totalPrice");
+                Date date = rs.getDate("date");
+
+                Sales sales = new Sales(id, name, salesPrice, quantity, totalPrice, date);
+                salesTableModel.addProduct(sales);
+            }
+
+            salesListTable.setModel(salesTableModel);
+            ps.close();
+        } catch (Exception e) {
+            e.printStackTrace();
+        } finally {
+            try {
+                dBUtil.getConnection().close();
+            } catch (SQLException ex) {
+                ex.printStackTrace();
+            }
+        }
+    }
+
     public void addSales() {
         try {
             Integer quantity = null;
-            if (salesQuantityField.getText().trim().isEmpty()) {
+            if (salesQuantityField.getText().isBlank()) {
                 JOptionPane.showMessageDialog(rootPane, "Quantity is Required");
                 return;
             } else {
@@ -494,6 +531,11 @@ public class JEE59Store extends javax.swing.JFrame {
                 }
             }
 
+            if (Integer.parseInt(salesAvailableField.getText()) < Integer.parseInt(salesQuantityField.getText())) {
+                JOptionPane.showMessageDialog(rootPane, "Product is Out of Stock");
+                return;
+            }
+
             Date date = salesDateField.getDate();
             java.sql.Date sqlDate = utilDateToSqlDate(date);
             if (sqlDate == null) {
@@ -503,20 +545,82 @@ public class JEE59Store extends javax.swing.JFrame {
 
             String sql = "insert into sales(name, salesPrice, quantity, totalPrice, date) values(?, ?, ?, ?, ?)";
 
-            PreparedStatement ps;
-            ps = dBUtil.getConnection().prepareStatement(sql);
+            Connection connection = dBUtil.getConnection();
+            connection.setAutoCommit(false);
+
+            PreparedStatement ps = connection.prepareStatement(sql);
 
             ps.setString(1, salesProductCombo.getSelectedItem().toString());
-            ps.setDouble(2, Double.parseDouble(salesPriceField.getText()));
-            ps.setDouble(3, Integer.parseInt(salesQuantityField.getText()));
-            ps.setDouble(4, Double.parseDouble(salesTotalPriceField.getText()));
+            ps.setDouble(2, Double.parseDouble(salesPriceField.getText().trim()));
+            ps.setDouble(3, Integer.parseInt(salesQuantityField.getText().trim()));
+            ps.setDouble(4, Double.parseDouble(salesTotalPriceField.getText().trim()));
             ps.setDate(5, sqlDate);
 
             ps.executeUpdate();
 
+            sql = "update product set quantity = quantity - ? where name = ?;";
+            ps = dBUtil.getConnection().prepareStatement(sql);
+            ps.setInt(1, Integer.parseInt(salesQuantityField.getText().trim()));
+            ps.setString(2, salesProductCombo.getSelectedItem().toString());
+
+            ps.executeUpdate();
+
+            connection.commit();
+
             ps.close();
             resetSalesFields();
+            loadSalesTableData();
             JOptionPane.showMessageDialog(this, "Sales Saved Successfully");
+        } catch (Exception e) {
+            e.printStackTrace();
+        } finally {
+            try {
+                if (dBUtil.getConnection() != null) {
+                    dBUtil.getConnection().close();
+                }
+            } catch (SQLException ex) {
+                ex.printStackTrace();
+            }
+        }
+    }
+
+    public void viewSalesReport() {
+        try {
+            Date fromDate = reportFromDate.getDate();
+            Date toDate = reportToDate.getDate();
+            java.sql.Date sqlFromDate = utilDateToSqlDate(fromDate);
+            java.sql.Date sqlToDate = utilDateToSqlDate(toDate);
+            if (sqlFromDate == null || sqlToDate == null) {
+                JOptionPane.showMessageDialog(rootPane, "Both Dates are Required");
+                return;
+            }
+
+            String sql = "select * from sales where date between ? and ?;";
+            PreparedStatement ps = dBUtil.getConnection().prepareStatement(sql);
+
+            ps.setDate(1, sqlFromDate);
+            ps.setDate(2, sqlToDate);
+
+            ResultSet rs = ps.executeQuery();
+            DefaultTableModel model = new DefaultTableModel();
+            model.setColumnIdentifiers(new Object[]{"SL", "Name", "Sales Price", "Quantity", "Total Price", "Date"});
+
+            int sl = 0;
+            while (rs.next()) {
+                Long id = rs.getLong("id");
+                String name = rs.getString("name");
+                Double salesPrice = rs.getDouble("salesPrice");
+                Integer quantity = rs.getInt("quantity");
+                Double totalPrice = rs.getDouble("totalPrice");
+                Date date = rs.getDate("date");
+
+                model.addRow(new Object[]{sl, name, salesPrice, quantity, totalPrice, date});
+                sl++;
+            }
+            reportTable.setModel(model);
+
+            ps.close();
+            reportTableTitle.setText("Sales Report");
         } catch (Exception e) {
             e.printStackTrace();
         } finally {
@@ -558,7 +662,7 @@ public class JEE59Store extends javax.swing.JFrame {
     // <editor-fold defaultstate="collapsed" desc="Generated Code">//GEN-BEGIN:initComponents
     private void initComponents() {
 
-        jPanel1 = new javax.swing.JPanel();
+        titlePane = new javax.swing.JPanel();
         jLabel1 = new javax.swing.JLabel();
         tabbedPane = new javax.swing.JTabbedPane();
         productPanel = new javax.swing.JPanel();
@@ -601,14 +705,23 @@ public class JEE59Store extends javax.swing.JFrame {
         jScrollPane2 = new javax.swing.JScrollPane();
         salesListTable = new javax.swing.JTable();
         salesDateField = new com.toedter.calendar.JDateChooser();
-        stockPanel = new javax.swing.JPanel();
+        jLabel18 = new javax.swing.JLabel();
+        salesAvailableField = new javax.swing.JTextField();
         reportPanel = new javax.swing.JPanel();
-        jPanel2 = new javax.swing.JPanel();
+        reportTableTitle = new javax.swing.JLabel();
+        jLabel20 = new javax.swing.JLabel();
+        reportSalesBtn = new javax.swing.JButton();
+        reportFromDate = new com.toedter.calendar.JDateChooser();
+        jLabel26 = new javax.swing.JLabel();
+        reportToDate = new com.toedter.calendar.JDateChooser();
+        jLabel21 = new javax.swing.JLabel();
+        jScrollPane3 = new javax.swing.JScrollPane();
+        reportTable = new javax.swing.JTable();
+        menuPane = new javax.swing.JPanel();
         jButton1 = new javax.swing.JButton();
         jLabel2 = new javax.swing.JLabel();
-        jButton2 = new javax.swing.JButton();
-        jButton3 = new javax.swing.JButton();
-        jButton4 = new javax.swing.JButton();
+        menuSalesBtn = new javax.swing.JButton();
+        menuReportBtn = new javax.swing.JButton();
 
         setDefaultCloseOperation(javax.swing.WindowConstants.EXIT_ON_CLOSE);
         setPreferredSize(new java.awt.Dimension(850, 700));
@@ -618,24 +731,24 @@ public class JEE59Store extends javax.swing.JFrame {
         jLabel1.setHorizontalAlignment(javax.swing.SwingConstants.CENTER);
         jLabel1.setText("JEE 59 Store");
 
-        javax.swing.GroupLayout jPanel1Layout = new javax.swing.GroupLayout(jPanel1);
-        jPanel1.setLayout(jPanel1Layout);
-        jPanel1Layout.setHorizontalGroup(
-            jPanel1Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
-            .addGroup(javax.swing.GroupLayout.Alignment.TRAILING, jPanel1Layout.createSequentialGroup()
+        javax.swing.GroupLayout titlePaneLayout = new javax.swing.GroupLayout(titlePane);
+        titlePane.setLayout(titlePaneLayout);
+        titlePaneLayout.setHorizontalGroup(
+            titlePaneLayout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
+            .addGroup(javax.swing.GroupLayout.Alignment.TRAILING, titlePaneLayout.createSequentialGroup()
                 .addContainerGap()
                 .addComponent(jLabel1, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE)
                 .addContainerGap())
         );
-        jPanel1Layout.setVerticalGroup(
-            jPanel1Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
-            .addGroup(jPanel1Layout.createSequentialGroup()
+        titlePaneLayout.setVerticalGroup(
+            titlePaneLayout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
+            .addGroup(titlePaneLayout.createSequentialGroup()
                 .addContainerGap()
                 .addComponent(jLabel1, javax.swing.GroupLayout.PREFERRED_SIZE, 46, javax.swing.GroupLayout.PREFERRED_SIZE)
                 .addContainerGap(28, Short.MAX_VALUE))
         );
 
-        getContentPane().add(jPanel1, new org.netbeans.lib.awtextra.AbsoluteConstraints(6, 6, 788, -1));
+        getContentPane().add(titlePane, new org.netbeans.lib.awtextra.AbsoluteConstraints(6, 6, 788, -1));
 
         jLabel3.setFont(new java.awt.Font("Segoe UI", 1, 14)); // NOI18N
         jLabel3.setHorizontalAlignment(javax.swing.SwingConstants.CENTER);
@@ -919,6 +1032,11 @@ public class JEE59Store extends javax.swing.JFrame {
         ));
         jScrollPane2.setViewportView(salesListTable);
 
+        jLabel18.setFont(new java.awt.Font("Segoe UI", 1, 12)); // NOI18N
+        jLabel18.setText("Available");
+
+        salesAvailableField.setEditable(false);
+
         javax.swing.GroupLayout salesPanelLayout = new javax.swing.GroupLayout(salesPanel);
         salesPanel.setLayout(salesPanelLayout);
         salesPanelLayout.setHorizontalGroup(
@@ -955,10 +1073,11 @@ public class JEE59Store extends javax.swing.JFrame {
                             .addComponent(salesDateField, javax.swing.GroupLayout.PREFERRED_SIZE, 180, javax.swing.GroupLayout.PREFERRED_SIZE))))
                 .addGap(18, 18, 18)
                 .addGroup(salesPanelLayout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
-                    .addGroup(javax.swing.GroupLayout.Alignment.TRAILING, salesPanelLayout.createSequentialGroup()
-                        .addComponent(jLabel17)
-                        .addGap(186, 186, 186))
                     .addGroup(salesPanelLayout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
+                        .addGroup(javax.swing.GroupLayout.Alignment.TRAILING, salesPanelLayout.createSequentialGroup()
+                            .addComponent(jLabel17)
+                            .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED)
+                            .addComponent(salesPriceField, javax.swing.GroupLayout.PREFERRED_SIZE, 180, javax.swing.GroupLayout.PREFERRED_SIZE))
                         .addGroup(salesPanelLayout.createSequentialGroup()
                             .addComponent(jLabel15)
                             .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED)
@@ -966,8 +1085,11 @@ public class JEE59Store extends javax.swing.JFrame {
                         .addGroup(salesPanelLayout.createSequentialGroup()
                             .addComponent(resetSalesBtn)
                             .addGap(18, 18, 18)
-                            .addComponent(deleteSalesBtn))
-                        .addComponent(salesPriceField, javax.swing.GroupLayout.Alignment.TRAILING, javax.swing.GroupLayout.PREFERRED_SIZE, 180, javax.swing.GroupLayout.PREFERRED_SIZE)))
+                            .addComponent(deleteSalesBtn)))
+                    .addGroup(salesPanelLayout.createSequentialGroup()
+                        .addComponent(jLabel18)
+                        .addGap(18, 18, 18)
+                        .addComponent(salesAvailableField, javax.swing.GroupLayout.PREFERRED_SIZE, 180, javax.swing.GroupLayout.PREFERRED_SIZE)))
                 .addContainerGap(javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE))
         );
         salesPanelLayout.setVerticalGroup(
@@ -978,7 +1100,10 @@ public class JEE59Store extends javax.swing.JFrame {
                 .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED)
                 .addGroup(salesPanelLayout.createParallelGroup(javax.swing.GroupLayout.Alignment.TRAILING)
                     .addComponent(jLabel12, javax.swing.GroupLayout.PREFERRED_SIZE, 19, javax.swing.GroupLayout.PREFERRED_SIZE)
-                    .addComponent(salesDateField, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE))
+                    .addComponent(salesDateField, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE)
+                    .addGroup(salesPanelLayout.createParallelGroup(javax.swing.GroupLayout.Alignment.BASELINE)
+                        .addComponent(jLabel18, javax.swing.GroupLayout.PREFERRED_SIZE, 22, javax.swing.GroupLayout.PREFERRED_SIZE)
+                        .addComponent(salesAvailableField, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE)))
                 .addGap(18, 18, 18)
                 .addGroup(salesPanelLayout.createParallelGroup(javax.swing.GroupLayout.Alignment.BASELINE)
                     .addComponent(jLabel13, javax.swing.GroupLayout.PREFERRED_SIZE, 19, javax.swing.GroupLayout.PREFERRED_SIZE)
@@ -1005,28 +1130,93 @@ public class JEE59Store extends javax.swing.JFrame {
 
         tabbedPane.addTab("Sales", salesPanel);
 
-        javax.swing.GroupLayout stockPanelLayout = new javax.swing.GroupLayout(stockPanel);
-        stockPanel.setLayout(stockPanelLayout);
-        stockPanelLayout.setHorizontalGroup(
-            stockPanelLayout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
-            .addGap(0, 610, Short.MAX_VALUE)
-        );
-        stockPanelLayout.setVerticalGroup(
-            stockPanelLayout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
-            .addGap(0, 569, Short.MAX_VALUE)
-        );
+        reportTableTitle.setFont(new java.awt.Font("Segoe UI", 1, 14)); // NOI18N
+        reportTableTitle.setHorizontalAlignment(javax.swing.SwingConstants.CENTER);
+        reportTableTitle.setText("Report");
 
-        tabbedPane.addTab("Stock", stockPanel);
+        jLabel20.setFont(new java.awt.Font("Segoe UI", 1, 12)); // NOI18N
+        jLabel20.setText("From");
+
+        reportSalesBtn.setText("View Sales");
+        reportSalesBtn.addMouseListener(new java.awt.event.MouseAdapter() {
+            public void mouseClicked(java.awt.event.MouseEvent evt) {
+                reportSalesBtnMouseClicked(evt);
+            }
+        });
+        reportSalesBtn.addActionListener(new java.awt.event.ActionListener() {
+            public void actionPerformed(java.awt.event.ActionEvent evt) {
+                reportSalesBtnActionPerformed(evt);
+            }
+        });
+
+        jLabel26.setFont(new java.awt.Font("Segoe UI", 1, 12)); // NOI18N
+        jLabel26.setText("To");
+
+        jLabel21.setFont(new java.awt.Font("Segoe UI", 1, 14)); // NOI18N
+        jLabel21.setHorizontalAlignment(javax.swing.SwingConstants.CENTER);
+        jLabel21.setText("Reports");
+
+        reportTable.setModel(new javax.swing.table.DefaultTableModel(
+            new Object [][] {
+                {},
+                {},
+                {},
+                {}
+            },
+            new String [] {
+
+            }
+        ));
+        jScrollPane3.setViewportView(reportTable);
 
         javax.swing.GroupLayout reportPanelLayout = new javax.swing.GroupLayout(reportPanel);
         reportPanel.setLayout(reportPanelLayout);
         reportPanelLayout.setHorizontalGroup(
             reportPanelLayout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
-            .addGap(0, 610, Short.MAX_VALUE)
+            .addGroup(reportPanelLayout.createSequentialGroup()
+                .addGroup(reportPanelLayout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
+                    .addGroup(reportPanelLayout.createSequentialGroup()
+                        .addGap(34, 34, 34)
+                        .addGroup(reportPanelLayout.createParallelGroup(javax.swing.GroupLayout.Alignment.TRAILING)
+                            .addGroup(reportPanelLayout.createSequentialGroup()
+                                .addComponent(jLabel26, javax.swing.GroupLayout.PREFERRED_SIZE, 41, javax.swing.GroupLayout.PREFERRED_SIZE)
+                                .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED)
+                                .addComponent(reportToDate, javax.swing.GroupLayout.PREFERRED_SIZE, 180, javax.swing.GroupLayout.PREFERRED_SIZE))
+                            .addGroup(reportPanelLayout.createSequentialGroup()
+                                .addComponent(jLabel20, javax.swing.GroupLayout.PREFERRED_SIZE, 41, javax.swing.GroupLayout.PREFERRED_SIZE)
+                                .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED)
+                                .addComponent(reportFromDate, javax.swing.GroupLayout.PREFERRED_SIZE, 180, javax.swing.GroupLayout.PREFERRED_SIZE)))
+                        .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.UNRELATED)
+                        .addComponent(reportSalesBtn)
+                        .addGap(0, 0, Short.MAX_VALUE))
+                    .addComponent(reportTableTitle, javax.swing.GroupLayout.DEFAULT_SIZE, 604, Short.MAX_VALUE)
+                    .addGroup(reportPanelLayout.createSequentialGroup()
+                        .addContainerGap()
+                        .addComponent(jScrollPane3))
+                    .addGroup(reportPanelLayout.createSequentialGroup()
+                        .addContainerGap()
+                        .addComponent(jLabel21, javax.swing.GroupLayout.DEFAULT_SIZE, 598, Short.MAX_VALUE)))
+                .addContainerGap())
         );
         reportPanelLayout.setVerticalGroup(
             reportPanelLayout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
-            .addGap(0, 569, Short.MAX_VALUE)
+            .addGroup(reportPanelLayout.createSequentialGroup()
+                .addGap(21, 21, 21)
+                .addComponent(jLabel21)
+                .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED)
+                .addGroup(reportPanelLayout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
+                    .addComponent(jLabel20, javax.swing.GroupLayout.PREFERRED_SIZE, 19, javax.swing.GroupLayout.PREFERRED_SIZE)
+                    .addComponent(reportFromDate, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE)
+                    .addComponent(reportSalesBtn))
+                .addGap(18, 18, 18)
+                .addGroup(reportPanelLayout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING, false)
+                    .addComponent(reportToDate, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE)
+                    .addComponent(jLabel26, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE))
+                .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED, 29, Short.MAX_VALUE)
+                .addComponent(reportTableTitle)
+                .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED)
+                .addComponent(jScrollPane3, javax.swing.GroupLayout.PREFERRED_SIZE, 398, javax.swing.GroupLayout.PREFERRED_SIZE)
+                .addContainerGap())
         );
 
         tabbedPane.addTab("Report", reportPanel);
@@ -1044,79 +1234,70 @@ public class JEE59Store extends javax.swing.JFrame {
         jLabel2.setHorizontalAlignment(javax.swing.SwingConstants.CENTER);
         jLabel2.setText("Menu");
 
-        jButton2.setText("Sales");
-        jButton2.addMouseListener(new java.awt.event.MouseAdapter() {
+        menuSalesBtn.setText("Sales");
+        menuSalesBtn.addMouseListener(new java.awt.event.MouseAdapter() {
             public void mouseClicked(java.awt.event.MouseEvent evt) {
-                jButton2MouseClicked(evt);
+                menuSalesBtnMouseClicked(evt);
             }
         });
-        jButton2.addActionListener(new java.awt.event.ActionListener() {
+        menuSalesBtn.addActionListener(new java.awt.event.ActionListener() {
             public void actionPerformed(java.awt.event.ActionEvent evt) {
-                jButton2ActionPerformed(evt);
+                menuSalesBtnActionPerformed(evt);
             }
         });
 
-        jButton3.setText("Stock");
-        jButton3.addActionListener(new java.awt.event.ActionListener() {
+        menuReportBtn.setText("Report");
+        menuReportBtn.addMouseListener(new java.awt.event.MouseAdapter() {
+            public void mouseClicked(java.awt.event.MouseEvent evt) {
+                menuReportBtnMouseClicked(evt);
+            }
+        });
+        menuReportBtn.addActionListener(new java.awt.event.ActionListener() {
             public void actionPerformed(java.awt.event.ActionEvent evt) {
-                jButton3ActionPerformed(evt);
+                menuReportBtnActionPerformed(evt);
             }
         });
 
-        jButton4.setText("Report");
-        jButton4.addActionListener(new java.awt.event.ActionListener() {
-            public void actionPerformed(java.awt.event.ActionEvent evt) {
-                jButton4ActionPerformed(evt);
-            }
-        });
-
-        javax.swing.GroupLayout jPanel2Layout = new javax.swing.GroupLayout(jPanel2);
-        jPanel2.setLayout(jPanel2Layout);
-        jPanel2Layout.setHorizontalGroup(
-            jPanel2Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
-            .addGroup(jPanel2Layout.createSequentialGroup()
+        javax.swing.GroupLayout menuPaneLayout = new javax.swing.GroupLayout(menuPane);
+        menuPane.setLayout(menuPaneLayout);
+        menuPaneLayout.setHorizontalGroup(
+            menuPaneLayout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
+            .addGroup(menuPaneLayout.createSequentialGroup()
                 .addContainerGap()
-                .addGroup(jPanel2Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
+                .addGroup(menuPaneLayout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
                     .addComponent(jButton1, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE)
                     .addComponent(jLabel2, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE)
-                    .addComponent(jButton2, javax.swing.GroupLayout.Alignment.TRAILING, javax.swing.GroupLayout.DEFAULT_SIZE, 148, Short.MAX_VALUE)
-                    .addComponent(jButton3, javax.swing.GroupLayout.Alignment.TRAILING, javax.swing.GroupLayout.DEFAULT_SIZE, 148, Short.MAX_VALUE)
-                    .addComponent(jButton4, javax.swing.GroupLayout.DEFAULT_SIZE, 148, Short.MAX_VALUE))
+                    .addComponent(menuSalesBtn, javax.swing.GroupLayout.Alignment.TRAILING, javax.swing.GroupLayout.DEFAULT_SIZE, 148, Short.MAX_VALUE)
+                    .addComponent(menuReportBtn, javax.swing.GroupLayout.DEFAULT_SIZE, 148, Short.MAX_VALUE))
                 .addContainerGap())
         );
-        jPanel2Layout.setVerticalGroup(
-            jPanel2Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
-            .addGroup(jPanel2Layout.createSequentialGroup()
+        menuPaneLayout.setVerticalGroup(
+            menuPaneLayout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
+            .addGroup(menuPaneLayout.createSequentialGroup()
                 .addContainerGap()
                 .addComponent(jLabel2)
                 .addGap(18, 18, 18)
                 .addComponent(jButton1)
                 .addGap(18, 18, 18)
-                .addComponent(jButton2)
+                .addComponent(menuSalesBtn)
                 .addGap(18, 18, 18)
-                .addComponent(jButton3)
-                .addGap(18, 18, 18)
-                .addComponent(jButton4)
-                .addContainerGap(javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE))
+                .addComponent(menuReportBtn)
+                .addContainerGap(398, Short.MAX_VALUE))
         );
 
-        getContentPane().add(jPanel2, new org.netbeans.lib.awtextra.AbsoluteConstraints(6, 92, -1, 552));
+        getContentPane().add(menuPane, new org.netbeans.lib.awtextra.AbsoluteConstraints(6, 92, -1, 552));
 
         pack();
         setLocationRelativeTo(null);
     }// </editor-fold>//GEN-END:initComponents
 
-    private void jButton2ActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_jButton2ActionPerformed
+    private void menuSalesBtnActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_menuSalesBtnActionPerformed
         // TODO add your handling code here:
-    }//GEN-LAST:event_jButton2ActionPerformed
+    }//GEN-LAST:event_menuSalesBtnActionPerformed
 
-    private void jButton3ActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_jButton3ActionPerformed
+    private void menuReportBtnActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_menuReportBtnActionPerformed
         // TODO add your handling code here:
-    }//GEN-LAST:event_jButton3ActionPerformed
-
-    private void jButton4ActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_jButton4ActionPerformed
-        // TODO add your handling code here:
-    }//GEN-LAST:event_jButton4ActionPerformed
+    }//GEN-LAST:event_menuReportBtnActionPerformed
 
     private void productIdFieldActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_productIdFieldActionPerformed
         // TODO add your handling code here:
@@ -1126,9 +1307,9 @@ public class JEE59Store extends javax.swing.JFrame {
         // TODO add your handling code here:
     }//GEN-LAST:event_addSalesBtnActionPerformed
 
-    private void jButton2MouseClicked(java.awt.event.MouseEvent evt) {//GEN-FIRST:event_jButton2MouseClicked
+    private void menuSalesBtnMouseClicked(java.awt.event.MouseEvent evt) {//GEN-FIRST:event_menuSalesBtnMouseClicked
         tabbedPane.setSelectedIndex(1);
-    }//GEN-LAST:event_jButton2MouseClicked
+    }//GEN-LAST:event_menuSalesBtnMouseClicked
 
     private void jButton1MouseClicked(java.awt.event.MouseEvent evt) {//GEN-FIRST:event_jButton1MouseClicked
         tabbedPane.setSelectedIndex(0);
@@ -1168,6 +1349,18 @@ public class JEE59Store extends javax.swing.JFrame {
     private void addSalesBtnMouseClicked(java.awt.event.MouseEvent evt) {//GEN-FIRST:event_addSalesBtnMouseClicked
         addSales();
     }//GEN-LAST:event_addSalesBtnMouseClicked
+
+    private void reportSalesBtnActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_reportSalesBtnActionPerformed
+        // TODO add your handling code here:
+    }//GEN-LAST:event_reportSalesBtnActionPerformed
+
+    private void reportSalesBtnMouseClicked(java.awt.event.MouseEvent evt) {//GEN-FIRST:event_reportSalesBtnMouseClicked
+        viewSalesReport();
+    }//GEN-LAST:event_reportSalesBtnMouseClicked
+
+    private void menuReportBtnMouseClicked(java.awt.event.MouseEvent evt) {//GEN-FIRST:event_menuReportBtnMouseClicked
+        tabbedPane.setSelectedIndex(2);
+    }//GEN-LAST:event_menuReportBtnMouseClicked
 
     /**
      * @param args the command line arguments
@@ -1212,9 +1405,6 @@ public class JEE59Store extends javax.swing.JFrame {
     private javax.swing.JButton editProductBtn;
     private javax.swing.JButton editSalesBtn;
     private javax.swing.JButton jButton1;
-    private javax.swing.JButton jButton2;
-    private javax.swing.JButton jButton3;
-    private javax.swing.JButton jButton4;
     private javax.swing.JLabel jLabel1;
     private javax.swing.JLabel jLabel10;
     private javax.swing.JLabel jLabel11;
@@ -1224,7 +1414,11 @@ public class JEE59Store extends javax.swing.JFrame {
     private javax.swing.JLabel jLabel15;
     private javax.swing.JLabel jLabel16;
     private javax.swing.JLabel jLabel17;
+    private javax.swing.JLabel jLabel18;
     private javax.swing.JLabel jLabel2;
+    private javax.swing.JLabel jLabel20;
+    private javax.swing.JLabel jLabel21;
+    private javax.swing.JLabel jLabel26;
     private javax.swing.JLabel jLabel3;
     private javax.swing.JLabel jLabel4;
     private javax.swing.JLabel jLabel5;
@@ -1232,10 +1426,12 @@ public class JEE59Store extends javax.swing.JFrame {
     private javax.swing.JLabel jLabel7;
     private javax.swing.JLabel jLabel8;
     private javax.swing.JLabel jLabel9;
-    private javax.swing.JPanel jPanel1;
-    private javax.swing.JPanel jPanel2;
     private javax.swing.JScrollPane jScrollPane1;
     private javax.swing.JScrollPane jScrollPane2;
+    private javax.swing.JScrollPane jScrollPane3;
+    private javax.swing.JPanel menuPane;
+    private javax.swing.JButton menuReportBtn;
+    private javax.swing.JButton menuSalesBtn;
     private javax.swing.JTextField productIdField;
     private javax.swing.JTable productListTable;
     private javax.swing.JTextField productNameField;
@@ -1244,9 +1440,15 @@ public class JEE59Store extends javax.swing.JFrame {
     private javax.swing.JTextField productSalesPriceField;
     private javax.swing.JTextField productTotalPriceField;
     private javax.swing.JTextField productUnitPriceField;
+    private com.toedter.calendar.JDateChooser reportFromDate;
     private javax.swing.JPanel reportPanel;
+    private javax.swing.JButton reportSalesBtn;
+    private javax.swing.JTable reportTable;
+    private javax.swing.JLabel reportTableTitle;
+    private com.toedter.calendar.JDateChooser reportToDate;
     private javax.swing.JButton resetProductBtn;
     private javax.swing.JButton resetSalesBtn;
+    private javax.swing.JTextField salesAvailableField;
     private com.toedter.calendar.JDateChooser salesDateField;
     private javax.swing.JTable salesListTable;
     private javax.swing.JPanel salesPanel;
@@ -1254,8 +1456,8 @@ public class JEE59Store extends javax.swing.JFrame {
     private javax.swing.JComboBox<String> salesProductCombo;
     private javax.swing.JTextField salesQuantityField;
     private javax.swing.JTextField salesTotalPriceField;
-    private javax.swing.JPanel stockPanel;
     private javax.swing.JTabbedPane tabbedPane;
+    private javax.swing.JPanel titlePane;
     // End of variables declaration//GEN-END:variables
 
 }
